--- a/index.html
+++ b/index.html
@@ -105,6 +105,33 @@
   background-position: center;
   background-size: cover;
  }
+
+ #bmi
+ {
+    background-color: rgb(26, 25, 25);
+    width: 100%;
+    height: 500px;
+  margin-top: 70px;
+
+  background-image: url(./bmi.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+ }
+
+ #live
+ {
+    background-color: rgb(26, 25, 25);
+    width: 100%;
+    height: 500px;
+  margin-top: 70px;
+  background-image: url(./live.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+ }
+
+
  
     </style>
   </head>
@@ -168,6 +195,31 @@
     </div>
 </div>
 
+
+
+<div class="container">
+  <div class="row">
+
+      <div class="col-12  ">
+          <div id="bmi">
+              <button style="position: relative; top: 80%; left: 42%;"  type="button" onclick="goToPage('bmi.html')">Calculate</button>
+          </div>
+      </div>
+  
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+
+      <div class="col-12  ">
+          <div id="live">
+              <button style="position: relative; top: 70%; left: 10%;"  type="button" onclick="goToPage('training.html')">GET TRAINING</button>
+          </div>
+      </div>
+  
+  </div>
+</div>
 
 
  <section id="send">
